# AO

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: NeuralNetwork.ipynb  NeuralNetwork2.ipynb
ao/: __main__.py  i18n.py  utils.py  widgets.py  window.py
ao/translations/: fr_FR.json  pl_PL.json
