[tool.poetry]
name = "ao"
version = "0.1.0"
description = ""
authors = ["Szymon Kozioł <szymonkoz@student.agh.edu.pl>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pyside6 = "^6.4.2"


[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^22.12.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
