[tool.poetry]
name = "ao"
version = "0.1.0"
description = ""
authors = ["Szymon Kozioł <szymonkoz@student.agh.edu.pl>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pyside6 = "^6.4.2"
pandas = "^1.5.2"
tensorflow = "^2.11.0"
opencv-python = "^4.7.0.68"
python-i18n = "^0.3.9"
qtmodern = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^22.12.0" }
jupyter = "^1.0.0"
numpy = "^1.24.1"
keras = "^2.11.0"
matplotlib = "^3.6.3"
plotly = "^5.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
